# aurelay

./: .gitignore  CHANGELOG.md  HOTFIX_RELEASE_SIGNING.md  KMP_MIGRATION_COMPLETE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: copilot-instructions.md
.github/workflows/: build-validation.yml  release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/devindeed/aurelay/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: server.p12
app/src/main/java/com/devindeed/aurelay/: AudioCaptureService.kt  AudioRelayService.kt  MainActivity.kt  MainActivityShared.kt  (+1 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
desktop/: send_audio.py
desktopApp/: build.gradle.kts
desktopApp/src/jvmMain/kotlin/uniffi/: rust_engine.kt
fastlane/: Appfile  Fastfile  README.md  report.xml
frontend_tests/: test.spec.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust_engine/: Cargo.toml
rust_engine/src/: discovery.rs  ffmpeg.rs  lib.rs  logs.rs  models.rs
rust_engine/src/audio/: capture.rs  device.rs  mod.rs  playback.rs
rust_engine/src/network/: mod.rs  session.rs  transport.rs
scripts/: bump_version.sh
shared/: README.md  build.gradle.kts
shared/src/androidMain/: AndroidManifest-Example.xml  AndroidManifest.xml
shared/src/commonMain/kotlin/com/aurelay/: App.kt  Constants.kt
(+43 files in other folders)
